--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@babel/preset-env": "^7.13.15",
     "@react-native-async-storage/async-storage": "^1.15.2",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-firebase/app": "^11.2.0",
-    "@react-native-firebase/messaging": "^11.2.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "react": "17.0.1",
@@ -24,6 +22,7 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
+    "react-native-table-component": "^1.2.1",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.0",
     "typescript": "^4.2.4"
